testsuite/tests/codeGen/should_fail/T13233_elab.stderr

T13233_elab.hs:17:11: error:
    Cannot use function with representation-polymorphic arguments:
      (#,#) @rep @rep @a @a :: a -> a -> (# a, a #)
    Representation-polymorphic arguments:
      a :: TYPE rep
      a :: TYPE rep

T13233_elab.hs:25:16: error:
    Cannot use function with representation-polymorphic arguments:
      (#,#) @rep1 @rep2 @a @b :: a -> b -> (# a, b #)
    Representation-polymorphic arguments:
      a :: TYPE rep1
      b :: TYPE rep2
